# scratch-pad

abstract-declaration/: abstract-declaration.cpp
array-in-struct-misdirection/: array-in-struct-misdirection.cpp
attrs-mandatory/: attrs-mandatory.py
bash_recursive_source/: bottom.sh  middle.sh  top.sh
c-boolean/: c-boolean.c
c-cpp-boolean/: cpp-boolean-ternary.cpp
ccsds_tc_randomizer/: ccsds_tc_randomizer.py
cli11-flags-with-value/: cli11-flags-with-value.cpp
close-after-dup/: close-after-dup.c
coarse-clock-sleep/: cmp_monotonic_coarse.c  coarse-clock-sleep.c
cpp-inherit-copy-ctor/: inherit-copy-ctor.cpp
cpp-method-resolution/: foo.cpp
cpp-private-members-across-instances/: private-members.cpp
cpp-redeclaration-shadow/: cpp-redecaration-shadow.cpp
cpp-sizeof-nested-arr/: sizeof-nested-arr.cpp
cpp-sizeof-string-literal/: cpp-sizeof-string-literal.cpp
cpp-templatized-subclass/: templatized-subclass.cpp
cpp-type-coercion-arithmetic/: type-coercion-arithmetic.cpp
cpp-udphdr-default-initialization/: udphdr-default-init.cpp
cpp_inherited__func__/: cpp_inherited__func__.cpp
declare-array-with-runtime-size/: array-with-runtime-size.c  array-with-runtime-size.cpp
lru_cache_remove/: caching.py  lru_cache_remove.py
python-package-non-py-script/: .gitignore  LICENSE  README.md  pyproject.toml  setup.py
python-package-non-py-script/src/the_package/: foo.py
python-package-non-py-script/src/the_package.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
python-package-non-py-script/the_package.egg-info/: PKG-INFO  SOURCES.txt
(+46 files in other folders)
