[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "the_package"
version = "0.0.1"
authors = [
    { name="Brian Finn", email="brian.finn@spire.com" },
]
description = "A test for packaging non-python scripts with setuptools"
readme = "README.md"
requires-python = ">=3.8"